deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders
  namespace: microservices-workshop
spec:
  selector:
    app: orders
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
